--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@clerk/clerk-react": "^5.31.9",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.10.0",
+    "framer-motion": "^12.23.12",
     "humanize-duration": "^3.33.0",
+    "lucide-react": "^0.541.0",
     "quill": "^2.0.3",
     "rc-progress": "^4.0.0",
     "react": "^19.1.0",
